--- a/family.html
+++ b/family.html
@@ -27,7 +27,7 @@
 		<img src="images/badlands.jpg" width="1000" alt="3 children standing in front of the Badlands Entrance Sign" >
 		<img src="images/falling.jpg" width="25" alt="A child holding a ledge of a rock and hanging by one hand" >
 		<img src="images/rushmore.jpg" width="1000" alt="Mount Rushmore seen from a distance through foliage" >
-		<img src="images/jewel_cave.jpg" width="25" alt="Three children in front of the Jewel Cave entrance sign" >
+		<img src="images/jewel_cave.JPG" width="25" alt="Three children in front of the Jewel Cave entrance sign" >
 		<p>I didn't plan for the fact that the Sturgis Motorcycle Rally would overlap with our trip. Many towns were closed to through traffic, and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 
